2007-03-07  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/webdavvfs.tcl: silence debug output
	* http2.6/http.tcl: merge in from tclsoap and jcw's webdav
	versions and merged in tcl8.5 changes.
	* http2.6/pkgIndex.tcl: version to 2.6.5

2006-12-28  Jean-Claude Wippler  <jcw@equi4.com>

	* configure: autoconf 2.59
	* tclconfig/tcl.m4: based on tcl.m4,v 1.97 2006/12/19 01:20:55 das

2006-12-10  Steve Huntley  <stephen.huntley@alum.mit.edu>

	* library/template/versionvfs.tcl: when time attribute is set,
	files created after set time are made invisible.

2006-11-14  Jean-Claude Wippler  <jcw@equi4.com>

	* library/mkclvfs.tcl: removed, now part of the vlerq extension again
	* library/pkgIndex.tcl, pkgIndex.tcl.in, Makefile.in: removed mkcl

2006-11-10  Steve Huntley  <stephen.huntley@alum.mit.edu>

	* library/template/templatevfs.tcl: file delete on vfs mount 
	point now causes vfs to unmount ; can now pass empty string
	as arbitrary attribute value

	* library/template/versionvfs.tcl: more efficient directory
	deletion code

2006-10-31  Steve Huntley  <stephen.huntley@alum.mit.edu>

	* library/template/versionvfs.tcl: added code to ensure all
	subfiles of a directory are deleted before dir deletion.

2006-10-29  Steve Huntley  <stephen.huntley@alum.mit.edu>

	Added comments and license info:
	* library/template/globfind.tcl
	* library/template/tdelta.tcl

2006-10-23  Steve Huntley  <stephen.huntley@alum.mit.edu>

	Initial upload of template virtual filesystems in new subfolder:
	* library/template/collatevfs.tcl
	* library/template/deltavfs.tcl
	* library/template/fishvfs.tcl
	* library/template/quotavfs.tcl
	* library/template/templatevfs.tcl
	* library/template/versionvfs.tcl

	Plus helper utlities:
	* library/template/tdelta.tcl - required by deltavfs.tcl
	* library/template/globfind.tcl - required by quotavfs.tcl

	* library/pkgIndex.tcl - added "package ifneeded" statements for
	template virtual filesystems.
