@@ -4,5 +4,5 @@
 # package ifneeded http 2.6 [list tclPkgSetup $dir http 2.6 {{http.tcl source {::http::config ::http::formatQuery ::http::geturl ::http::reset ::http::wait ::http::register ::http::unregister}}}]
 #
 if {![package vsatisfies [package provide Tcl] 8.2]} {return}
-package ifneeded http 2.6.5 [list source [file join $dir http.tcl]]
+package ifneeded http 2.6.6 [list source [file join $dir http.tcl]]
 
